Improved binaryTree